fix date input width on ios

--- a/packages/styles/src/components/input.css
+++ b/packages/styles/src/components/input.css
@@ -19,6 +19,7 @@
 		font-size: var(--text-md);
 		color: var(--color-text);
 
+		appearance: none;
 		background-color: var(--color-background-interactive);
 
 		transition:
